- First working version
- Adding support for navigation through different sessions

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
     }
     compileSdkVersion 27
     defaultConfig {
-        applicationId 'com.shehabic.sherlock'
+        applicationId 'com.shehabic.testsherlock'
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 1
