--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,13 @@ buildscript {
     ext.architecture_components_version = '1.1.1'
     ext.support_libraries_version = '28.0.0-rc02'
 
-    ext.kotlin_version = '1.2.50'
+    ext.kotlin_version = '1.2.61'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:3.2.0-rc03'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
