--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.2.71'
     ext.architecture_components_version = '1.1.1'
-    ext.support_libraries_version = '28.0.0-rc02'
-
-    ext.kotlin_version = '1.2.61'
+    ext.support_libraries_version = '27.1.1'
+    ext.sherlock_version = 'v.0.9.0'
+    ext.okhttp_version = '3.11.0'
     repositories {
         google()
         jcenter()
         mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
         // NOTE: Do not place your application dependencies here; they belong
