--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,9 @@ buildscript {
     ext.kotlin_version = '1.2.71'
     ext.architecture_components_version = '1.1.1'
     ext.support_libraries_version = '27.1.1'
-    ext.sherlock_version = 'v.0.9.0'
     ext.okhttp_version = '3.11.0'
+    ext.VERSION_NAME = "0.9.2"
+
     repositories {
         google()
         jcenter()
