--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,20 @@ org.gradle.jvmargs=-Xmx4096M
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+VERSION_CODE=0.9.2
+
+POM_DEVELOPER_ID=shehabic
+POM_DEVELOPER_NAME=Mohamed Shehab Osman
+
+GROUP=com.github.shehabic
+POM_DESCRIPTION=A library to capture android app crashes and show their details
+POM_URL=https://github.com/shehabic/sherlock
+POM_SCM_URL=https://github.com/shehabic/sherlock
+POM_SCM_CONNECTION=scm:git@github.com:shahebic/sherlock.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:shehabic/Sherlock.git
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=sherlock
+
