--- a/sherlock_no_op/build.gradle
+++ b/sherlock_no_op/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'maven-publish'
 
 android {
     compileSdkVersion 28
@@ -25,37 +24,12 @@ android {
     }
 }
 
-
-publishing {
-    publications {
-        bar(MavenPublication) {
-            groupId 'com.github.shehabic'
-            artifactId 'sherlock-no-op'
-            version "$sherlock_version"
-            artifact(bundleReleaseAar)
-            pom.withXml {
-                def dependenciesNode = asNode().appendNode('dependencies')
-                configurations.compile.allDependencies.each {
-                    if (it.group != null && it.name != null) {
-                        def dependencyNode = dependenciesNode.appendNode('dependency')
-                        dependencyNode.appendNode('groupId', it.group)
-                        dependencyNode.appendNode('artifactId', it.name)
-                        dependencyNode.appendNode('version', it.version)
-                    }
-                }
-            }
-        }
-    }
-    repositories {
-        maven {
-            url "~/.m2/repository"
-        }
-    }
+ext {
+    artifactId = 'sherlock-no-op'
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation "com.android.support:appcompat-v7:$support_libraries_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -66,3 +40,6 @@ dependencies {
 repositories {
     mavenCentral()
 }
+
+apply from: rootProject.file('gradle/publish.gradle')
+apply plugin: 'com.github.dcendents.android-maven'
