--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,13 +23,16 @@ android {
         multiDexEnabled true //important
     }
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+        debug
     }
-    productFlavors {
+    dexOptions {
+        dexInProcess false
     }
+
+    lintOptions {
+        disable 'GoogleAppIndexingWarning'
+    }
+
 }
 
 dependencies {
