--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: SherlockPlugin
 
+SherlockExtension {
+    enabled = true
+}
 
 android {
     configurations {
