WIP: Adding plugin to proxy all okhttp requests without interceptors

--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,13 @@ buildscript {
         google()
         jcenter()
         mavenLocal()
+        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+//        classpath 'com.github.shehabic:sherlock-plugin:v1.0.1b'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
