--- a/sherlock-plugin/build.gradle
+++ b/sherlock-plugin/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java-gradle-plugin'
+apply plugin: 'maven-publish'
 
 repositories {
     google()
@@ -15,3 +16,24 @@ dependencies {
     implementation 'com.android.tools.build:gradle:3.2.1'
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
 }
+
+task sourceJar(type: Jar) {
+    from sourceSets.main.allSource
+    classifier "sources"
+}
+//apply from: rootProject.file('gradle/publish.gradle')
+publishing {
+    publications {
+        bar(MavenPublication) {
+            groupId 'com.github.shehabic'
+            artifactId 'sherlock-plugin'
+            version VERSION_NAME
+        }
+    }
+    repositories {
+        maven {
+            url "~/.m2/repository"
+        }
+    }
+}
+apply plugin: 'com.github.dcendents.android-maven'
