--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,15 @@ buildscript {
         jcenter()
         mavenLocal()
         maven { url 'https://jitpack.io' }
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-//        classpath 'com.github.shehabic:sherlock-plugin:v1.0.1b'
+        classpath "com.gradle.publish:plugin-publish-plugin:0.9.9"
+
+//        classpath 'com.github.shehabic:sherlock-plugin:1.0.2b'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
