WIP: Adding plugin to proxy all okhttp requests without interceptors

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'sherlock-plugin'
+//apply plugin: 'sherlock-plugin'
 
 android {
     configurations {
