--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ VERSION_CODE=0.9.2
 POM_DEVELOPER_ID=shehabic
 POM_DEVELOPER_NAME=Mohamed Shehab Osman
 
-GROUP=com.github.shehabic
+GROUP=com.github.shehabic.sherlock
 POM_DESCRIPTION=A library to capture android app crashes and show their details
 POM_URL=https://github.com/shehabic/sherlock
 POM_SCM_URL=https://github.com/shehabic/sherlock
