--- a/sherlock-plugin/build.gradle
+++ b/sherlock-plugin/build.gradle
@@ -43,7 +43,7 @@ task javadocJar(type: Jar) {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId 'com.github.shehabic'
+            groupId GROUP
             artifactId 'sherlock-plugin'
             version VERSION_NAME
             from components.java
