--- a/sherlock/build.gradle
+++ b/sherlock/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    api "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
 repositories {
@@ -54,7 +54,7 @@ task sourceJar(type: Jar) {
 publishing {
     publications {
         bar(MavenPublication) {
-            groupId 'com.github.shehabic'
+            groupId GROUP
             artifactId 'sherlock'
             version VERSION_NAME
             artifact(bundleDebugAar)
@@ -66,4 +66,4 @@ publishing {
         }
     }
 }
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.github.dcendents.android-maven'
