--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     ext.architecture_components_version = '1.1.1'
     ext.support_libraries_version = '27.1.1'
     ext.okhttp_version = '3.11.0'
-    ext.VERSION_NAME = "v1.0.5"
+    ext.VERSION_NAME = VERSION_CODE
 
     repositories {
         google()
@@ -19,7 +19,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath "com.gradle.publish:plugin-publish-plugin:0.9.9"
-        classpath 'com.github.shehabic.sherlock:sherlock-plugin:v1.0.5'
+//        classpath 'com.github.shehabic.sherlock:sherlock-plugin:v1.0.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
