--- a/gradle.properties
+++ b/gradle.properties
@@ -13,12 +13,12 @@ org.gradle.jvmargs=-Xmx4096M
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-VERSION_CODE=1.1.1
+VERSION_CODE=1.1.2
 
 POM_DEVELOPER_ID=shehabic
 POM_DEVELOPER_NAME=Mohamed Shehab Osman
 
-GROUP=com.github.shehabic.sherlock
+GROUP=com.github.shehabic
 POM_DESCRIPTION=A library to capture android app crashes and show their details
 POM_URL=https://github.com/shehabic/sherlock
 POM_SCM_URL=https://github.com/shehabic/sherlock
