--- a/sherlock-plugin/build.gradle
+++ b/sherlock-plugin/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation 'com.squareup:javapoet:1.11.1'
     implementation 'com.github.javaparser:javaparser-core:3.9.1'
     implementation 'commons-io:commons-io:2.6'
-    implementation 'com.android.tools.build:gradle:3.2.1'
+    implementation 'com.android.tools.build:gradle:3.3.0'
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
 }
 
@@ -43,8 +43,8 @@ task javadocJar(type: Jar) {
 publishing {
     publications {
         maven(MavenPublication) {
-            groupId GROUP
-            artifactId POM_ARTIFACT_ID
+            groupId 'com.github.shehabic'
+            artifactId 'sherlock-plugin'
             version VERSION_NAME
             from components.java
         }
